2007-03-13  Quentin Mathe <qmathe@club-internet.fr>

	* GNUmakefile.preamble:
	* GNUmakefile.postamble:
	Deleted old content not needed at all now we use etoile.make.
	* Source/GNUmakefile: Replaced GNUSTEP_INSTALLATION_DIR by 
	ETOILE_CORE_MODULE.

2007-03-13  Quentin Mathe <qmathe@club-internet.fr>

	New icon theme support (not yet used by IKIcon)
	* Headers/IKIconTheme.h:
	* Source/IKIconTheme.m:
	Added.
	* Source/GNUmakefile: Updated.
	* test.icontheme: Theme bundle used to test icon theme support. Also useful
	as a template. 
	Works and pass all unit tests.

2007-02-19 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Format README in reStructuedText

2007-02-28  Quentin Mathe <qmathe@club-internet.fr>

	* QuickTest.io: Added Io script to test basic IconKit features by enabling 
	to interact quickly and directly. Script interest and code quality is 
	really low for now...

2006-11-28  Quentin Mathe <qmathe@club-internet.fr>

	* Source/IKIconProvider.m: Fixed icons path by creating the cache 
	in User domain rather than Local.
	* Source/IKApplicationIconProvider.m: Added logs statement to aid debugging. 
	Fixed composited icons path by creating the cache in User domain rather than 
	Local.
	* Source/NSFileManager+IconKit.m: Fixed file manager related calls by
	referencing the singleton object rather than 'self' (NSFileManager is 
	probably a class cluster).

2006-11-28  Quentin Mathe <qmathe@club-internet.fr>

	* Headers/IKIcon.h:
	* Headers/IKCompositor.h:
	* Headers/IconKit.h:
	Fixed headers import within the library and updated the umbrella header to 
	include more headers. This allows to use the library now (previously project
	compilation would have failed on header import).
	* Source/GNUmakefile: Updated to install headers even if 'test' isn't set to 
	'no'. Removed headers related lines which serve no purpose.

2006-11-02  Quentin Mathe <qmathe@club-internet.fr>

	* Source/IKIconProvider.m:
	* Source/NSFileManager+IconKit.m: